# PanikSim

./: CMakeLists.txt  panic.par  readme.txt
doku/: PanicPackage.tar
samples/2000Partikel_grosserRaum_Feuer/: panic.par
samples/200Partikel_kleinerRaum_ohneFeuer/: panic.par
samples/5000Partikel_mit_Feuer/: panic.par
src/: PanicSimMain.cu  Xlib_mod.cu  Xlib_mod.h  Xlibext.c  base.c  deviceFunc.cu  deviceFunc.h  format  formatStyle.txt  hostFunc.cu  hostFunc.h  kernels.cu  kernels.h  kernels_constant_stepsize.cu  nrutil.c  prepareParameter.cc  prepareParameter.cu  prepareParameter.h  readpar.c  readpar.h  sd.cu  sd.par  sd_lib.cu  sd_lib.h  types.h  update.cu  update.h
